More tests migrated